# ser

./: CLAUDE.md  Cargo.toml  Justfile  README.md
.github/workflows/: release.yml
cli/: Cargo.toml  build.rs
cli/src/: interactive.rs  main.rs
cli/src/command/: disable.rs  edit.rs  enable.rs  generate.rs  list.rs  logs.rs  mod.rs  new.rs  restart.rs  show.rs  start.rs  stop.rs  timer.rs
docs/: consumer-requests.md  timers-roadmap.md
lib/: Cargo.toml
lib/src/: lib.rs  plist.rs  systemd.rs
lib/src/platform/: linux.rs  macos.rs  mod.rs
ser_cli/: Cargo.toml
ser_cli/src/: main.rs
ser_cli/src/command/: add.rs  edit.rs  list.rs  logs.rs  mod.rs  new.rs  start.rs  stop.rs
ser_lib/: Cargo.toml
ser_lib/src/platform/: linux.rs  macos.rs  mod.rs
