[workspace]
members = ["cli", "lib"]
resolver = "3"

[workspace.package]
version = "0.1.5"
edition = "2021"
repository = "https://github.com/kurtbuilds/ser"
license = "MIT"

[workspace.dependencies]
kurtbuilds-serlib = { version = "*", path = "lib" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
plist = "1.8"
anyhow = "1.0"
tabled = "0.20.0"
atty = "0.2"
dialoguer = "0.12"
dirs = "6"
