[package]
name = "ser_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ser"
path = "src/main.rs"

[dependencies]
ser_lib = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tabled = { workspace = true }
atty = { workspace = true }
dialoguer = { workspace = true }
plist = { workspace = true }
