[package]
name = "kurtbuilds-ser"
version.workspace = true
edition.workspace = true
description = "A CLI tool for managing background services on macOS and Linux"
repository.workspace = true
license.workspace = true
readme = "../README.md"

[[bin]]
name = "ser"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/ser-{ target }.tar.gz"
bin-dir = "ser"
pkg-fmt = "tgz"

[dependencies]
kurtbuilds-serlib.workspace = true
clap.workspace = true
anyhow.workspace = true
tabled.workspace = true
atty.workspace = true
dialoguer.workspace = true
plist.workspace = true
