[package]
name = "kurtbuilds-serlib"
version.workspace = true
edition.workspace = true
description = "Library for managing background services on macOS and Linux"
repository.workspace = true
license.workspace = true

[lib]
name = "serlib"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
plist.workspace = true
anyhow.workspace = true
dirs.workspace = true
